Add `GET /payments/{id}`
