# spec/openapi3.yml
@@ -301,6 +301,41 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
   /payments/{id}:
+    get:
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: pay_type
+          in: query
+          required: true
+          schema:
+            type: string
+          description: |
+            決済種別
+              Card- クレジットカード決済
+              Applepay - Apple Pay
+              Konbini- コンビニ決済
+              Paypay- PayPay
+              Directdebit - 口座振替
+              Virtualaccount - 銀行振込（バーチャル口座）
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                oneOf:
+                  - $ref: '#/components/schemas/paymentCardResponse'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
     put:
       parameters:
         - name: id
